--- a/ztp.yml
+++ b/ztp.yml
@@ -8,14 +8,13 @@
     target_mac: "{{ mac_address }}"
     target_ip: "{{ ip_address }}"
     target_hostname: "{{ vm_hostname }}"
-    sat_url: "{{ satellite_url }}"
+    sat_url: "http://nuc6.aus.redhat.com"
 
     # Austin Environment Constants
     sat_org: "Red_Hat"
     sat_location: "Austin"
     sat_domain: "aus.redhat.com"
     sat_subnet: "Austin Subnet"
-
     target_os: "RedHat 9.6"
     target_arch: "x86_64"
     target_pxe_loader: "PXELinux BIOS"
@@ -36,17 +35,11 @@
       delegate_to: localhost
 
   tasks:
-    - name: Debug Environment Variables
-      debug:
-        msg: 
-          - "User from FOREMAN_USERNAME: {{ lookup('env', 'FOREMAN_USERNAME') }}"
-          - "User from SATELLITE_USERNAME: {{ lookup('env', 'SATELLITE_USERNAME') }}"
-      delegate_to: localhost
     - name: Create Managed Host in Satellite
       redhat.satellite.host:
         server_url: "{{ sat_url }}"
-        username: "{{ lookup('env', 'FOREMAN_USERNAME') }}"
-        password: "{{ lookup('env', 'FOREMAN_PASSWORD') }}"
+        username: "{{ foreman_username }}"
+        password: "{{ foreman_password }}"
         validate_certs: false
         name: "{{ target_hostname }}.{{ sat_domain }}"
         organization: "{{ sat_org }}"
@@ -71,8 +64,8 @@
     - name: Wait for the host to complete provisioning
       redhat.satellite.host_info:
         server_url: "{{ sat_url }}"
-        username: "{{ lookup('env', 'FOREMAN_USERNAME') }}"
-        password: "{{ lookup('env', 'FOREMAN_PASSWORD') }}"
+        username: "{{ foreman_username }}"
+        password: "{{ foreman_password }}"
         validate_certs: false
         name: "{{ target_hostname }}.{{ sat_domain }}"
       register: host_details
