--- a/ztp.yml
+++ b/ztp.yml
@@ -8,7 +8,7 @@
     target_mac: "{{ mac_address }}"
     target_ip: "{{ ip_address }}"
     target_hostname: "{{ vm_hostname }}"
-    sat_url: "nuc6.aus.redhat.com"
+    sat_url: "https://nuc6.aus.redhat.com"
 
     # Austin Environment Constants
     sat_org: "Red_Hat"
