--- a/ztp.yml
+++ b/ztp.yml
@@ -23,7 +23,7 @@
         ip: "{{ ip_address }}"
         mac: "{{ mac_address }}"
         hostgroup: "Austin-ZTP"
-        root_password: "RedHat123!"
+        root_pass: "RedHat123!"
         managed: false
         build: false
         state: present
